# files-manager

./: .gitignore  README.md  pyproject.toml
scripts/: build.bat
source/: cli.py  config.py  config_manager.py  main.py  main_window.py  query.py  register.py  settings.py  settings_manager.py
