[project]
name = "files-manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Victor", email = "victor.ched@gmail.com" }]
dependencies = ["pyinstaller>=6.14.1", "pyside6>=6.9.1", "typer[all]>=0.16.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
sf = "source/main.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.isort]
profile = "black"
